kubernetes/nexus/nexus-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus-deployment
  namespace: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
       name: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.9.0
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-volume
              mountPath: /nexus-data
      volumes:
        - name: nexus-volume
          persistentVolumeClaim:
            claimName: nexus-persistentvolumeclaim
