kubernetes/nexus/nexus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
  labels:
    name: nexus
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    name: nexus
