kubernetes/nexus/nexus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  labels:
    app: nexus
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nexus-static-ip
spec:
  securityContext:
    fsGroup: 200
  backend:
    serviceName: nexus-service
    servicePort: 8081
